@@ -244,7 +244,7 @@ M.Request = M.Object.extend(
             this.beforeSend(request);
         }
 
-        if(this.callbacks && M.EventDispatcher.checkHandler(this.callbacks['beforeSend'])) {
+        if(this.callbacks && this.callbacks['beforeSend'] && M.EventDispatcher.checkHandler(this.callbacks['beforeSend'])) {
             M.EventDispatcher.callHandler(this.callbacks['beforeSend'], null, NO, [request]);
         }
     },
@@ -261,7 +261,7 @@ M.Request = M.Object.extend(
             this.onError(request, msg);
         }
 
-        if(this.callbacks && M.EventDispatcher.checkHandler(this.callbacks['error'])) {
+        if(this.callbacks && this.callbacks['error'] && M.EventDispatcher.checkHandler(this.callbacks['error'])) {
             M.EventDispatcher.callHandler(this.callbacks['error'], null, NO, [request, msg]);
         }
     },
@@ -279,7 +279,7 @@ M.Request = M.Object.extend(
             this.onSuccess(data, msg, request);
         }
 
-        if(this.callbacks && M.EventDispatcher.checkHandler(this.callbacks['success'])) {
+        if(this.callbacks && this.callbacks['success'] && M.EventDispatcher.checkHandler(this.callbacks['success'])) {
             M.EventDispatcher.callHandler(this.callbacks['success'], null, NO, [data, msg, request]);
         }
     },
